--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,4 @@
-<h2>about me</h2>
-<p>this is Md Dayam khan from ies collge(bhopal)
-i am pursuing B-tech in computer science.
-i love coding and it's magics.
+<h1>about me</h1>
+<p>this is Md Dayam barkat
+
 <h1>still learning<h1></h1></p>
